Advertising tags. Featured events tags. Advertising setup form. Validation

--- a/alpha/accounts/templates/userena/email_form.html
+++ b/alpha/accounts/templates/userena/email_form.html
@@ -25,6 +25,6 @@
           <legend>{% trans "Change email address" %}</legend>
           {{ form.as_p }}
         </fieldset>
-        <input type="submit" value="{% trans "Change email" %}" />
+        <input type="submit" class="standart button" value="{% trans "Change email" %}" />
     </form>
 {% endblock %}
