--- a/alpha/accounts/templates/userena/password_reset_confirm_form.html
+++ b/alpha/accounts/templates/userena/password_reset_confirm_form.html
@@ -32,7 +32,7 @@
                     </table>
                 </div>                
               
-                <input type="submit" class="submit" value="{% trans "Reset password" %}" />
+                <input type="submit" class="submit standart button" value="{% trans "Reset password" %}" />
             </form>
         </div>
     </div>
