--- a/alpha/accounts/templates/userena/password_reset_form.html
+++ b/alpha/accounts/templates/userena/password_reset_form.html
@@ -23,7 +23,7 @@
                         </tr>
                     </table>
                 </div>
-                <input type="submit" class="submit" value="{% trans "Send password" %}" />
+                <input type="submit" class="submit standart button" value="{% trans "Send password" %}" />
             </form>
             
         </div>
