--- a/alpha/accounts/templates/userena/profile_form.html
+++ b/alpha/accounts/templates/userena/profile_form.html
@@ -20,6 +20,6 @@
     <legend>{% trans "Edit Profile" %}</legend>
     {{ form.as_p }}
   </fieldset>
-  <input type="submit" value="{% trans "Save changes" %}" />
+  <input type="submit" class="submit standart button" value="{% trans "Save changes" %}" />
 </form>
 {% endblock %}
