--- a/alpha/accounts/templates/userena/signin_form.html
+++ b/alpha/accounts/templates/userena/signin_form.html
@@ -50,7 +50,7 @@
                         <input type="hidden" name="next" value="{{ next }}" />
                     {% endif %}
                 </div>
-                <input type="submit" class="submit" value="{% trans "Signin" %}" />
+                <input type="submit" class="submit standart button" value="{% trans "Signin" %}" />
             </form>
         </div>
     </div>
