--- a/alpha/accounts/templates/userena/signup_form.html
+++ b/alpha/accounts/templates/userena/signup_form.html
@@ -29,7 +29,7 @@
                     {% endfor %}
                 </table>
             </div>          
-            <input type="submit" class="submit" value="{% trans "Signup"%}" />
+            <input type="submit" class="submit standart button" value="{% trans "Signup"%}" />
         </form>
     </div>
 </div>
