--- a/alpha/accounts/templates/venue_accounts/_venue_events_table.html
+++ b/alpha/accounts/templates/venue_accounts/_venue_events_table.html
@@ -7,7 +7,7 @@
 {% paginate 6 venue_events %}
 <div class="account-entry-wrapper entry-wrapper">
 {% for event in venue_events %}    
-    <div class="entry-info">
+    <div class="entry-info {% if private %}with-actions{% endif %}">
         <div class="entry-img-prev">
             {% if event.picture %}
                 <img src="{% cropped_thumbnail event "cropping" width=60 %}" height="60px" weight="60px">
