--- a/alpha/event/templates/events/_event_featured.html
+++ b/alpha/event/templates/events/_event_featured.html
@@ -1,45 +1,16 @@
 {% load endless %}
 {% load cropping %}
+{% load featured_event %}
 <div class="featured-area">
     <h2>Featured Events</h2>
     <div class="features-wrapper" data-no-turbolink>
-        <!--start.featured_events-->
-        {% paginate 6 featuredEventsFilter.qs using "featured_page" as featured_events %}        
+        {% paginate 6 featuredEventsFilter.qs using "featured_page" as featured_events %}
         {% for event in featured_events %}
-            <div class="features">
-                <div class="featured-img-wrapper">
-                    {% if event.picture %}
-                        <img src="{% cropped_thumbnail event "cropping" width=154 %}" height="153px" weight="154px">
-                    {% else %}
-                        <img src="{{STATIC_URL}}images/default-event.jpg" height="153px" weight="154px">
-                    {% endif %}
-                </div>
-                <div class="featured-img-details">
-                    <div class="featured-img-details-wrapper">
-                        <div class="featured-title">
-                            <a href="{% url 'event_view' event.slug %}">{{event.name}}</a>
-                        </div>
-                        <div class="featured-date">                                                                            
-                            <!-- TODO: use event date range and time range -->
-                            {{ event.nearest_start_time|date:"b d, Y | fA"|title }}-{{event.nearest_end_time|date:"fA"|title}}
-                        </div>
-                        <div class="feature-venue">
-                            {{ event.venue.name }}
-                        </div>
-                        <div class="featured-details-link">
-                            <a href="{% url 'event_view' event.slug %}">
-                                event details
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        {%endfor%}
-        <!--end.features-->
-    
+            {% featured_event event %}
+        {% endfor %}
         <div class="clr"></div>
     </div>
-    <!--start.features-navigation-->            
+
     <div class="features-navigation">
         {% get_pages %}    
         <ul>
@@ -81,6 +52,5 @@
                 {% endif %}
             </span>
         </ul>
-    </div>    
-    <!--end.features-navigation-->
+    </div>
 </div>
