--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -1,3 +1,5 @@
+{% load advertising_tags %}
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang='en_US'>
 <head>
@@ -7,6 +9,7 @@
     <link href="{{STATIC_URL}}styles/styles.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/styles-new.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/advertising.css" rel="stylesheet" type="text/css" />
 
     <link type="text/css" href="{{STATIC_URL}}date/css/redmond/jquery-ui-1.8.23.custom.css" rel="stylesheet" />
     <link href="{{ STATIC_URL }}css/facebook.css" type="text/css" rel="stylesheet" media="all" />
@@ -41,7 +44,7 @@
     </ul>
 {% endif %}    
 <div class="wrapper">
-    <div class="page-container">    
+    <div class="page-container">
         <div class="header"  data-no-turbolink>
             <div class="primary-header">
                 <div class="logo">
@@ -64,71 +67,89 @@
             {% include '_main_navigation.html' %}
         </div>
 
-
+        {% block featured %}{% endblock %}
         
-        {% block featured %}{% endblock %}        
-        
-        <!--start.content-wrapper-->
         <div class="content-wrapper">
             {% block page %}{% endblock %}
-        </div>
-
-        <!--start.footer-wrapper-->
-        <div class="footer-wrapper" data-no-turbolink>
-            <div class="footer-container">
-                <div class="footer-ads-wrapper">
-                    <div class="footer-ads-container"> 
-                        <a href="#">
-                            <img src="{{STATIC_URL}}images/add_images/avast.png" />
-                        </a>
-                    </div>
-                    <div class="footer-social-links">
-                        <h3>FOLLOW US</h3>
-                        <div class="social-links"> <a href="#"><img src="{{STATIC_URL}}images/fb-like.png" /></a>
-                            <a href="#"><img src="{{STATIC_URL}}images/fb.png" /></a>
-                            <a href="#"><img src="{{STATIC_URL}}images/twitter.png" /></a>
-                            <a href="#"><img src="{{STATIC_URL}}images/mail.png" /></a>
-                            <a href="#"><img src="{{STATIC_URL}}images/google-plus.png" /></a>
-                            <a href="#"><img src="{{STATIC_URL}}images/you-tube.png" /></a>
+            {% block advertising %}
+                    {% random %}
+                        <div class="advertising-right-container">
+                            <div class="advertising-right">
+                                {% advertising "300x250" %}
+                            </div>
+                            <div class="advertising-right">
+                                {% advertising "300x600" %} 
+                            </div>
+                            <div class="advertising-right">
+                                {% advertising "300x100" %}
+                            </div>
                         </div>
-                    </div>
-                    <div class="clr"></div>
+                    {% or %}
+                        <div class="advertising-right-container">
+                            <div class="advertising-right">
+                                {% advertising "300x250" %}
+                            </div>
+                            <div class="advertising-right">
+                                {% advertising "300x250" %}
+                            </div>
+                            <div class="advertising-right">
+                                {% advertising "300x250" %}
+                            </div>
+                        </div>
+                    {% or %}
+                        <div class="advertising-right-container">
+                            <div class="advertising-right">
+                                {% advertising "160x600" %}
+                            </div>
+                            <div class="advertising-right">
+                                {% advertising "300x100" %}
+                            </div>
+                        </div>
+                    {% endrandom %}                    
                 </div>
-            </div>
-        </div>    
-        <!--end.footer-wrapper-->
+            {% endblock%}
+            <div class="clr"></div>
+        </div>
+    </div>
 
-        <!--start.footer-site-links-->
-
-        <div class="footer-site-links" data-no-turbolink>
-            <div class="footer-container">
-                <div class="copyright">&copy; 2012 Cityfusion</div>
-                <div class="footer-site-map">
-                    <ul>            
-                        <li><a href="/advertise/">Advertising</a></li>
-                        <li><a href="/">FAQ</a></li>
-                        <li><a href="/feedback/">Feedback</a></li>
-                        <li><a href="contact.php">Contact</a></li>           
-                    </ul>        
-                </div>    
-                <div class="clr"></div>    
+    <div class="footer-wrapper" data-no-turbolink>
+        <div class="footer-container">
+            <div class="footer-ads-wrapper">
+                <div class="footer-ads-container">
+                    {% advertising "728x90" %}
+                </div>
+                <div class="clr"></div>
             </div>
         </div>
-        <!--end.footer-site-links-->
-
-        <script type="text/javascript">
-            function onBlur(el) {
-                if (el.value == '') {
-                    el.value = el.defaultValue;
-                }
-            }
-            function onFocus(el) {
-                if (el.value == el.defaultValue) {
-                    el.value = '';
-                }
-            }
-        </script> 
     </div>
+
+    <div class="footer-site-links" data-no-turbolink>
+        <div class="footer-container">
+            <div class="copyright">&copy; 2012 Cityfusion</div>
+            <div class="footer-site-map">
+                <ul>            
+                    <li><a href="/advertise/">Advertising</a></li>
+                    <li><a href="/">FAQ</a></li>
+                    <li><a href="/feedback/">Feedback</a></li>
+                    <li><a href="contact.php">Contact</a></li>
+                </ul>
+            </div>
+            <div class="clr"></div>
+        </div>
+    </div>
+
+    <script type="text/javascript">
+        function onBlur(el) {
+            if (el.value == '') {
+                el.value = el.defaultValue;
+            }
+        }
+        function onFocus(el) {
+            if (el.value == el.defaultValue) {
+                el.value = '';
+            }
+        }
+    </script> 
 </div>  
 </body>
 </html>
