Show advertising only if it present

--- a/alpha/advertising/templates/advertising/advertising.html
+++ b/alpha/advertising/templates/advertising/advertising.html
@@ -1,3 +1,5 @@
-<a href="{% url 'advertising_open' advertising.id %}">
-    <img src="/media/{{ advertising.image }}" />
-</a>
+{% if advertising %}
+    <a href="{% url 'advertising_open' advertising.id %}">
+        <img src="/media/{{ advertising.image }}" />
+    </a>
+{% endif %}
