--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-ui-1.8.23.custom.min.js"></script>
 
+    <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/restore-scroll-position.js"></script>
 
     <script src="{{STATIC_URL}}js/validate.js" type="text/javascript"></script>
