--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -25,15 +25,20 @@
     <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/emb_vnprf.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse_event_list.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/place_autocomplete.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/autoSuggest.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />    
+
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>
+    <script src="{{STATIC_URL}}js/jquery.geocomplete.js"></script>
 
     <script src="{{STATIC_URL}}js/tabs.js" type="text/javascript" ></script>
-    <script src="{{STATIC_URL}}js/accounts/account.js" type="text/javascript" ></script>
     <script src="{{STATIC_URL}}js/browse/jquery.hoverIntent.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/jump-to-date.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/browse/auctions-popup.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/browse/browse-page.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/accounts/account.js" type="text/javascript" ></script>
 {% endblock %}
 
 {% block content %}
@@ -49,12 +54,9 @@
                 </div>
                 <div class="account-settings">
                     <header>
-                        My setting
+                        My settings
                     </header>
                     <ul>
-                        <li>
-                            <a>Edit my Preferences</a>
-                        </li>
                         <li>
                             <a href="{% url 'user_profile_edit' profile.user.username %}">Edit my Account</a>
                         </li>
@@ -69,6 +71,10 @@
                         </li>
                     </ul>
                 </div>
+                <a class="new-venue-button" href="javascript: void;">
+                    <img src="/static/images/accounts/new-venue-bg.jpg">
+                    New Venue
+                </a>
             </div>
             <div class="account-details">
                 <header class="block-header">
@@ -87,7 +93,7 @@
 
                 {% if profile.venue %}
                     <h2 class="block-header"> 
-                        Your accounts
+                        Your Venues
                     </h2>
                     {% venue_accounts %}                    
                 {% endif %}
@@ -108,4 +114,7 @@
             {% include 'accounts/_in_the_loop_events_table.html' %}
         </div>
     </div>    
+
+    {% include 'venue_accounts/new_venue_account.html' %}
+
 {% endblock %}
