--- a/alpha/accounts/templates/userena/venue_accounts.html
+++ b/alpha/accounts/templates/userena/venue_accounts.html
@@ -1,7 +1,18 @@
-{% for venue_account in venue_accounts %}
-<div>
-    <a class="mngp" href="{% url 'private_venue_account' slug=venue_account.slug %}">      
-        {{ venue_account.venue.name }}
-    </a>
-</div>
-{% endfor %}
+<table class="venue-accounts-table">
+    {% for venue_account in venue_accounts %}
+    <tr>
+        <td>
+            <a class="mngp" href="{% url 'private_venue_account' slug=venue_account.slug %}">      
+                {{ venue_account.venue.name }}
+            </a>
+        </td>        
+        <td class="remove-td">
+            <a class="remove-button confirm" href="{% url 'unlink_venue_account_from_user_profile' venue_account_id=venue_account.id %}"></a>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
+
+<!--<div class="link-venue-popup">
+
+</div>-->
