--- a/alpha/accounts/templates/venue_accounts/create_venue_account.html
+++ b/alpha/accounts/templates/venue_accounts/create_venue_account.html
@@ -27,7 +27,7 @@
 {% block page %}
     <div class="primary-content">
         <h1>
-            {{ venue_account.venue.name }} contacts
+            Create new venue account
         </h1>
         <div class="content account-profile">
             <div class="main-content account-profile">
