--- a/alpha/event/templates/events/_browse_left_menu.html
+++ b/alpha/event/templates/events/_browse_left_menu.html
@@ -22,6 +22,30 @@
                     Random
                 </a>
             </li>
+            <br>
+
+            <li class="special">
+                <a href="{% events_filter_url request eventsFilter function="night_life"  exclude="tag" %}">
+                    Night life
+                </a>
+            </li>
+            <li class="special">
+                <a href="{% events_filter_url request eventsFilter function="date_night"  exclude="tag" %}">
+                    Date Night
+                </a>
+            </li>
+            <li class="special">
+                <a href="{% events_filter_url request eventsFilter function="free"  exclude="tag" %}">
+                    Free
+                </a>
+            </li>
+            <li class="special">
+                <a href="{% events_filter_url request eventsFilter function="family"  exclude="tag" %}">
+                    Family
+                </a>
+            </li>
+
+
             <li class="subheader all-categories">
                 <a href="{% events_filter_url request eventsFilter function="tags" exclude="tag|datetime" %}" >All Categories</a>                
             </li>
