--- a/alpha/accounts/templates/userena/email_form.html
+++ b/alpha/accounts/templates/userena/email_form.html
@@ -5,26 +5,27 @@
 {% block content_title %}<h2>{% blocktrans with user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}</h2>{% endblock %}
 
 {% block content %}
-    <form action="" method="post">
-        <ul id="box-nav">
+<form action="" method="post">
+    <div class="tabs-container">
+        <ul class="tabs right-tabs">
             <li class="first">
                 <a href="{% url 'userena_profile_detail' user.username %}"><span>{% trans 'View profile' %}</span></a>
             </li>
             <li>
-                <a href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a>
+                <a href="{% url 'user_profile_edit' user.username %}">{% trans "Edit profile" %}</a>
             </li>
             <li>
                 <a href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a>
             </li>
-            <li class="last selected">
+            <li class="last current">
                 <a href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a>
             </li>
         </ul>
         {% csrf_token %}
-        <fieldset>
-          <legend>{% trans "Change email address" %}</legend>
-          {{ form.as_p }}
-        </fieldset>
-        <input type="submit" class="standart button" value="{% trans "Change email" %}" />
-    </form>
+        <div class="box account-form visible">            
+            {{ form.as_p }}            
+            <input type="submit" class="standart button" value="{% trans "Change email" %}" />
+        </div>        
+    </div>
+</form>
 {% endblock %}
