--- a/alpha/accounts/templates/userena/password_form.html
+++ b/alpha/accounts/templates/userena/password_form.html
@@ -8,17 +8,26 @@
 
 {% block content %}
 <form action="" method="post" id="password_change_form">
-  <ul id="box-nav">
-    <li class="first"><a href="{% url 'userena_profile_detail' user.username %}"><span>{% trans 'View profile' %}</span></a></li>
-    <li><a href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a></li>
-    <li  class="selected"><a href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a></li>
-    <li class="last"><a href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a></li>
-  </ul>
-  <fieldset>
-    <legend>{% trans "Change Password" %}</legend>
-    {% csrf_token %}
-    {{ form.as_p }}
-  </fieldset>
-  <input type="submit" class="standart button" value="{% trans "Change password" %}" />
+    <div class="tabs-container">
+        <ul class="tabs right-tabs">    
+            <li class="first">
+                <a href="{% url 'userena_profile_detail' user.username %}"><span>{% trans 'View profile' %}</span></a>
+            </li>
+            <li>
+                <a href="{% url 'user_profile_edit' user.username %}">{% trans "Edit profile" %}</a>
+            </li>
+            <li class="current">
+                <a href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a>
+            </li>
+            <li class="last">
+                <a href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a>
+            </li>
+        </ul>
+        <div class="box account-form visible">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="standart big-button button" value="{% trans "Change password" %}" />
+        </div>        
+    </div>
 </form>
 {% endblock %}
