--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -23,14 +23,25 @@
     <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/search_pad.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/emb_vnprf.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/browse_event_list.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/place_autocomplete.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/autoSuggest.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />    
 
+    <link href="{{STATIC_URL}}styles/place_autocomplete.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/suggest.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/autoSuggest.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
+
+
+    <script src="{{STATIC_URL}}fancybox/jquery.fancybox.js" type="text/javascript"></script>
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>
-    <script src="{{STATIC_URL}}js/jquery.geocomplete.js"></script>
+    
+    <script src="{{STATIC_URL}}js/jquery.dj.selectable.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/location/jquery.geocomplete.js"></script>
+
+    <script type="text/javascript">
+        {% if location %}
+            window.user_lat = {{location.0}};
+            window.user_lng = {{location.1}};
+        {% endif %}
+    </script>
 
     <script src="{{STATIC_URL}}js/tabs.js" type="text/javascript" ></script>
     <script src="{{STATIC_URL}}js/browse/jquery.hoverIntent.js" type="text/javascript"></script>
@@ -38,6 +49,7 @@
     <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/jump-to-date.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/browse/auctions-popup.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/accounts/link_venue_to_account.js" type="text/javascript" ></script>
     <script src="{{STATIC_URL}}js/accounts/account.js" type="text/javascript" ></script>
 {% endblock %}
 
@@ -71,7 +83,7 @@
                         </li>
                     </ul>
                 </div>
-                <a class="new-venue-button" href="javascript: void;">
+                <a class="new-venue-button" href="{% url 'create_venue_account' %}">
                     <img src="/static/images/accounts/new-venue-bg.jpg">
                     New Venue
                 </a>
@@ -83,17 +95,15 @@
                     {% else %}
                         <span class="nickname">{{ profile.user.username }}</span>
                     {% endif %}
-                    
-                    <!--{{ profile.user.get_full_name }}({{ profile.nickname }})-->
                 </header>
                 <hr />
                 <span>
-                    Members since {{ profile.user.date_joined|date:"F d, Y" }}  <!--January 01, 2011-->
+                    Members since {{ profile.user.date_joined|date:"F d, Y" }}
                 </span>
 
                 {% if profile.venue %}
                     <h2 class="block-header"> 
-                        Your Venues
+                        My Venues
                     </h2>
                     {% venue_accounts %}                    
                 {% endif %}
@@ -113,8 +123,6 @@
         <div class="box">
             {% include 'accounts/_in_the_loop_events_table.html' %}
         </div>
-    </div>    
-
-    {% include 'venue_accounts/new_venue_account.html' %}
+    </div>
 
 {% endblock %}
