--- a/alpha/event/static/styles/browse/featured_events.css
+++ b/alpha/event/static/styles/browse/featured_events.css
@@ -5,35 +5,62 @@
     white-space: nowrap;
 }
 
-.features-navigation .step-links a {
-    display: inline-block;
-    width: 19px;
-    height: 20px;
-    line-height: 20px;
-    background: #fff;
-    border-right: 1px solid #e1e6eb;
-    text-decoration: none;
-    color: #7f7f7f;    
-    text-align: center;
-    font-weight: bold;
-    vertical-align: top;
+.features-navigation
+{
+    padding-top:10px;
+    padding-right:8px;
+    text-align:right;
 }
 
-.features-navigation .step-links a img {
-    margin-top: 4px;
+.features-navigation ul
+{
+    margin:0;
+    padding:0;
+    list-style:none;
+    width:auto;
+}
+
+.features-navigation ul a
+{
+    display: inline-block;
+    padding: 10px;
+    border-radius: 5px; /*optional*/
+    color: #5dacfd;
+    font-size: .875em;
+}
+
+.features-navigation ul a
+{
+    display: inline-block;
+    padding: 4px 9px;
+    margin-right: 4px;
+    border-radius: 3px;
+    border: solid 1px #c0c0c0;
+    background: #e9e9e9;
+    box-shadow: inset 0px 1px 0px rgba(255,255,255, .8), 0px 1px 3px rgba(0,0,0, .1);
+    font-size: .875em;
+    font-weight: bold;
+    text-decoration: none;
+    color: #717171;
+    text-shadow: 0px 1px 0px rgba(255,255,255, 1);
+
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f8f8f8), to(#e9e9e9));
+    background: -moz-linear-gradient(0% 0% 270deg,#f8f8f8, #e9e9e9);
+}
+
+.features-navigation ul a:hover {
+    background: #fefefe;
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FEFEFE), to(#f0f0f0));
+    background: -moz-linear-gradient(0% 0% 270deg,#FEFEFE, #f0f0f0);
+    color: #022e52;
 }
 
 .features-navigation .step-links a.current{
-    background: none;
-    border-right: 1px solid rgba(0,0,0,0)
-}
-
-.features-navigation .step-links a:hover{
-    color: #000;
-}
-
-.features-navigation .step-links a.prev, .features-navigation .step-links a.next {
-    width: 45px;
+    border: none;
+    background: #616161;
+    box-shadow: inset 0px 0px 8px rgba(0,0,0, .5), 0px 1px 0px rgba(255,255,255, .8);
+    color: #f0f0f0;
+    text-shadow: 0px 0px 3px rgba(0,0,0, .5);
 }
 
 .entry-navigation-np ul {
@@ -43,3 +70,4 @@
 .entry-navigation-np .step-links a {
     text-decoration: none;
 }
+    
