--- a/alpha/event/templates/events/setup_featured_event.html
+++ b/alpha/event/templates/events/setup_featured_event.html
@@ -7,7 +7,7 @@
     <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/modal.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}css/crop.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/crop.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/datepicker.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/featured/setup.css" rel="stylesheet" type="text/css" />
     
