--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -112,7 +112,7 @@ body
 
 .location-wrapper
 {
-	float:left;
+	float: right;
 }
 
 .location-wrapper .location-label
@@ -331,7 +331,9 @@ body
 
 .featured-img-wrapper img
 {
-	border:4px solid #eee;
+	border: 4px solid #eee;
+	width: 154px;
+	height: 153px;
 }
 
 .featured-img-details
@@ -379,42 +381,6 @@ body
 	text-decoration:underline;
 }
 
-.features-navigation
-{
-	padding-top:10px;
-	padding-right:8px;
-	text-align:right;
-}
-
-.features-navigation ul
-{
-	margin:0;
-	padding:0;
-	list-style:none;
-	width:auto;
-}
-
-.features-navigation ul li
-{
-	display:inline-block;
-	margin-left:3px;
-}
-
-.features-navigation ul li a
-{
-	display:inline-block;
-	padding:5px 7px;
-	font-weight:bold;
-	text-decoration:none;
-	color:#333;
-	background:#fff;
-	font-size:12px;
-	height:14px;
-}
-.features-navigation ul li a:hover {
-	color:#ff9e00;
-}
-
 .main-content-wrapper {
 	width:auto;
 	padding: 30px 15px 0px;
@@ -433,7 +399,7 @@ body
 
 
 .menu-wrapper {
-	width:1200px;
+	width:1024px;
 }
 
 .main-content
