Comment location navigation to avoid error

--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -21,11 +21,11 @@
             <div class="search-lists">
                 <ul>
                     <h3>Pick a Location</h3>
-                    {%for location in nearest_locations %}
+                    <!--for location in nearest_locations
                         <li>
                             <a href="#" data-venue-id="{{ location.id }}">{{location.name}}, {{location.city.name_std}}</a>
                         </li>
-                    {%endfor%}
+                    endfor-->
                 </ul>
             </div>
         </div>
